# evobird

./: Cargo.toml  README.md
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/pkg/: lib_simulation_wasm.d.ts  lib_simulation_wasm_bg.js  lib_simulation_wasm_bg.wasm  lib_simulation_wasm_bg.wasm.d.ts
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
src/: main.rs
www/: index.html  index.js  package-lock.json  package.json
