[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-neural-network = { path = "libs/neural-network" }
lib-genetic-algorithm = { path = "libs/genetic-algorithm" }
lib-simulation-wasm = { path = "libs/simulation-wasm" }

[workspace]
resolver = "2"
members = [
  "libs/*",
]
